--- a/EQ/EQClientsViewController.xib
+++ b/EQ/EQClientsViewController.xib
@@ -48,7 +48,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{768, 44}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="629831207"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -63,7 +62,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{88, 0}, {102, 44}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="471320543"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -98,7 +96,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{201, 5}, {42, 16}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="567535520"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -122,7 +119,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{265, 5}, {95, 16}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="406892317"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -146,7 +142,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{412, 5}, {113, 16}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="904188955"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -170,7 +165,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{195, 20}, {56, 21}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="566022720"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -195,7 +189,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{255, 20}, {119, 21}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="239452303"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -217,7 +210,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{412, 20}, {132, 21}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="434213010"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -238,7 +230,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{374, 0}, {37, 44}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -268,7 +259,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{724, 7}, {35, 30}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="889422165"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -293,7 +283,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{571, 10}, {25, 24}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="582484491"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -325,7 +314,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{634, 10}, {25, 24}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="801393167"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -345,7 +333,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{683, 10}, {25, 24}}</string>
 								<reference key="NSSuperview" ref="318688130"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="9650563"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -363,7 +350,6 @@
 						</array>
 						<string key="NSFrameSize">{768, 44}</string>
 						<reference key="NSSuperview" ref="228881687"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="822293026"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -384,7 +370,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{769, 45}</string>
 								<reference key="NSSuperview" ref="889422165"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="607096332"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -399,7 +384,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{10, 7}, {122, 31}}</string>
 								<reference key="NSSuperview" ref="889422165"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -431,7 +415,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{252, 12}, {264, 21}}</string>
 								<reference key="NSSuperview" ref="889422165"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="975049319"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -465,7 +448,6 @@
 						</array>
 						<string key="NSFrame">{{0, 44}, {769, 45}}</string>
 						<reference key="NSSuperview" ref="228881687"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="892373643"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -484,7 +466,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrameSize">{768, 866}</string>
 								<reference key="NSSuperview" ref="975049319"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="361017140"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
@@ -500,7 +481,6 @@
 								<array class="NSMutableArray" key="NSSubviews"/>
 								<string key="NSFrame">{{5, 101}, {758, 765}}</string>
 								<reference key="NSSuperview" ref="975049319"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="206328092"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="102840806"/>
@@ -520,7 +500,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{652, 14}, {90, 21}}</string>
 								<reference key="NSSuperview" ref="975049319"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="299040174"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -541,7 +520,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{652, 34}, {105, 31}}</string>
 								<reference key="NSSuperview" ref="975049319"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="650240708"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -567,7 +545,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{15, 80}, {86, 21}}</string>
 								<reference key="NSSuperview" ref="975049319"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="421360021"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -588,7 +565,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{166, 79}, {68, 22}}</string>
 								<reference key="NSSuperview" ref="975049319"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="788985616"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -609,7 +585,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{353, 79}, {62, 22}}</string>
 								<reference key="NSSuperview" ref="975049319"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="689668630"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -630,7 +605,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{570, 80}, {88, 22}}</string>
 								<reference key="NSSuperview" ref="975049319"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="282779311"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
@@ -651,7 +625,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{542, 797}, {53, 11}}</string>
 								<reference key="NSSuperview" ref="975049319"/>
-								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -665,7 +638,6 @@
 								<int key="NSvFlags">290</int>
 								<string key="NSFrame">{{0, 28}, {400, 44}}</string>
 								<reference key="NSSuperview" ref="975049319"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="509040631"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor">
@@ -682,7 +654,6 @@
 						</array>
 						<string key="NSFrame">{{0, 89}, {768, 866}}</string>
 						<reference key="NSSuperview" ref="228881687"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="744798275"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
@@ -695,7 +666,6 @@
 				</array>
 				<string key="NSFrame">{{0, 20}, {768, 955}}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="318688130"/>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">3</int>
@@ -1167,145 +1137,7 @@
 			<nil key="sourceID"/>
 			<int key="maxID">324</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes">
-			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
-				<object class="IBPartialClassDescription">
-					<string key="className">EQBaseViewController</string>
-					<string key="superclassName">UIViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="clientsButtonAction:">id</string>
-						<string key="goalsAction:">id</string>
-						<string key="logoutAction:">id</string>
-						<string key="notificationsAction:">id</string>
-						<string key="pendingOrdersAction:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="clientsButtonAction:">
-							<string key="name">clientsButtonAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="goalsAction:">
-							<string key="name">goalsAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="logoutAction:">
-							<string key="name">logoutAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="notificationsAction:">
-							<string key="name">notificationsAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="pendingOrdersAction:">
-							<string key="name">pendingOrdersAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="chooseClientButton">UIButton</string>
-						<string key="clientNameLabel">UILabel</string>
-						<string key="clientStatusLabel">UILabel</string>
-						<string key="dateLabel">UILabel</string>
-						<string key="goalsButton">UIButton</string>
-						<string key="notificationsButton">UIButton</string>
-						<string key="pendingOrdersButton">UIButton</string>
-						<string key="sellerNameLabel">UILabel</string>
-						<string key="syncDateLabel">UILabel</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="chooseClientButton">
-							<string key="name">chooseClientButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="clientNameLabel">
-							<string key="name">clientNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="clientStatusLabel">
-							<string key="name">clientStatusLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="dateLabel">
-							<string key="name">dateLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="goalsButton">
-							<string key="name">goalsButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="notificationsButton">
-							<string key="name">notificationsButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="pendingOrdersButton">
-							<string key="name">pendingOrdersButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="sellerNameLabel">
-							<string key="name">sellerNameLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="syncDateLabel">
-							<string key="name">syncDateLabel</string>
-							<string key="candidateClassName">UILabel</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EQBaseViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">EQClientsViewController</string>
-					<string key="superclassName">EQBaseViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="newClientButtonAction:">id</string>
-						<string key="sortButtonAction:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="newClientButtonAction:">
-							<string key="name">newClientButtonAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-						<object class="IBActionInfo" key="sortButtonAction:">
-							<string key="name">sortButtonAction:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="outlets">
-						<string key="searchBar">EQTransparentBackgroundSearchBar</string>
-						<string key="sortButton">UIButton</string>
-						<string key="tableView">UITableView</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<object class="IBToOneOutletInfo" key="searchBar">
-							<string key="name">searchBar</string>
-							<string key="candidateClassName">EQTransparentBackgroundSearchBar</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="sortButton">
-							<string key="name">sortButton</string>
-							<string key="candidateClassName">UIButton</string>
-						</object>
-						<object class="IBToOneOutletInfo" key="tableView">
-							<string key="name">tableView</string>
-							<string key="candidateClassName">UITableView</string>
-						</object>
-					</dictionary>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EQClientsViewController.h</string>
-					</object>
-				</object>
-				<object class="IBPartialClassDescription">
-					<string key="className">EQTransparentBackgroundSearchBar</string>
-					<string key="superclassName">UISearchBar</string>
-					<object class="IBClassDescriptionSource" key="sourceIdentifier">
-						<string key="majorKey">IBProjectSource</string>
-						<string key="minorKey">./Classes/EQTransparentBackgroundSearchBar.h</string>
-					</object>
-				</object>
-			</array>
-		</object>
+		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBIPadFramework</string>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
