--- a/EQ/EQCommunicationCell.xib
+++ b/EQ/EQCommunicationCell.xib
@@ -130,7 +130,7 @@
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="257316042"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
-						<object class="NSColor" key="IBUIBackgroundColor" id="242792508">
+						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwAA</bytes>
 						</object>
@@ -146,7 +146,10 @@
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="897160793"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
-				<reference key="IBUIBackgroundColor" ref="242792508"/>
+				<object class="NSColor" key="IBUIBackgroundColor">
+					<int key="NSColorSpace">2</int>
+					<bytes key="NSRGB">MC45MTM3MjU1NTQ5IDAuOTQxMTc2NTMzNyAwLjk3NjQ3MDY0OTIAA</bytes>
+				</object>
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				<reference key="IBUIContentView" ref="897160793"/>
 				<string key="IBUIReuseIdentifier">CommunicationCell</string>
