--- a/EQ/EQCurrentAccountViewController.xib
+++ b/EQ/EQCurrentAccountViewController.xib
@@ -122,7 +122,7 @@
 								<string key="NSFrame">{{265, 5}, {95, 16}}</string>
 								<reference key="NSSuperview" ref="619878751"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="240167369"/>
+								<reference key="NSNextKeyView" ref="717601699"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<bool key="IBUIClipsSubviews">YES</bool>
@@ -217,6 +217,7 @@
 								<string key="NSFrame">{{374, 0}, {37, 44}}</string>
 								<reference key="NSSuperview" ref="619878751"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="240167369"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
@@ -678,7 +679,7 @@
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<int key="IBUILineBreakMode">2</int>
-								<string key="IBUINormalTitle">  Cliente</string>
+								<string key="IBUINormalTitle">  Fecha</string>
 								<reference key="IBUIHighlightedTitleColor" ref="574513523"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
@@ -1633,7 +1634,6 @@
 						<int key="objectID">99</int>
 						<reference key="object" ref="359542279"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="701378044"/>
 							<reference ref="373270741"/>
 							<reference ref="892404941"/>
 							<reference ref="122816937"/>
@@ -1664,6 +1664,7 @@
 							<reference ref="171834287"/>
 							<reference ref="405374728"/>
 							<reference ref="340187575"/>
+							<reference ref="701378044"/>
 						</array>
 						<reference key="parent" ref="766721923"/>
 						<string key="objectName">View - Body</string>
